Implement advanced friends menus